--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 html, body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 canvas {
   display: block;
+}
+body {
+  position: relative;
 }
