--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 html, body {
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+  position: fixed;
+
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 canvas {
   display: block;
 }
 body {
-  position: relative;
+  position: fixed;
 }
